feat: add code examples and style rules

--- a/index.html
+++ b/index.html
@@ -41,20 +41,27 @@
           </ul>
         </div>
         <div>
+          <h2>Code examples</h2>
+          <a href="https://www.codewars.com/users/araneusX/completed_solutions">
+            <p>There are my code examples:</p>
+            <p><img src="https://www.codewars.com/users/araneusX/badges/small" alt="Code examples is here: https://www.codewars.com/users/araneusX/completed_solutions"></p>
+          </a>  
+        </div>
+        <div>
           <h4>English: A1 Elementary</h4>
         </div>
       </div>
       <div class = "wrapper-right">
-        <img src="./photo.png">
-      <div class = "contact-info">
-        <h2>Contact information</h2>
-        <ul>
-          <li><span>Phone</span>:	+375 29 574 84 74</li>
-          <li><span>E-Mail</span>: araneusX@gmail.com</li>
-          <li><span>Github</span>: @araneusX</li>
-        </ul>
+          <img src="./photo.png">
+        <div class = "contact-info">
+          <h2>Contact information</h2>
+          <ul>
+            <li><span>Phone</span>:	+375 29 574 84 74</li>
+            <li><span>E-Mail</span>: araneusX@gmail.com</li>
+            <li><span>Github</span>: @araneusX</li>
+          </ul>
+        </div>
       </div>
-    </div>
       </main>
       <footer>
         <div>This page was created for task «Основы HTML, CSS и Git»</div>
