fix: fix error in content

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
       </main>
       <footer>
-        <div>This page was created for task «Основы HTML, CSS и Git»</div>
+        <div>This page was created for task "HTML, CSS & Git Basics"</div>
       </footer>
     </div>
   </body>
